--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -9,7 +9,7 @@
 }
 
 
-.nav button {
+.nav-button {
   font-weight: bold;
   font-size: 1.2rem;
   padding: 12px 16px;
@@ -20,15 +20,13 @@
   color: white;
   margin: 0 0 0 4rem;
 }
-.nav button:hover,
-.nav button:focus,
-.nav button:active {
+.nav-button:hover,
+.nav-button:focus,
+.nav-button:active {
+  color: white;
   background-color: var(--accent-color);
 }
-.nav button a {
-  color: white;
-  font-size: 1.2rem;
-}
+
 
 .link {
   color: rgb(94, 94, 94);
