--- a/styles/add-vehicle.module.css
+++ b/styles/add-vehicle.module.css
@@ -1,7 +1,25 @@
 
 .form {
   display: flex;
-  justify-content: center;
   align-items: center;
+
+  margin: 0 auto;
+  max-width: 500px;
 }
 
+.form button {
+  margin-right: auto;
+}
+.form label {
+  margin: 0 1rem;
+  font-weight: bold;
+}
+
+.form input {
+  font-size: 1rem;
+  width: 14ch;
+  padding: 12px 16px;
+}
+.form input:focus-visible {
+  outline: var(--accent-color) auto 1px;
+}
